syntax = "proto3";

package linuxcnc.status;

import "proto/status/position.proto";
import "proto/status/axis/axis.proto";
import "proto/status/traj/traj.proto";
import "proto/status/joint/joint.proto";
import "proto/status/spindle/spindle.proto";

option java_package = "ro.dragossusi.proto.linuxcnc.status";
option java_multiple_files = true;

message MotionStatus {

  TrajectoryStatus trajectory_status = 1;

  repeated JointStatus joint_status = 2;

  repeated AxisStatus axis_status = 3;

  repeated SpindleStatus spindle_status = 4;

  /** Motion inputs queried by interp*/
  repeated int32 synch_di = 5;
  /** Motion outputs queried by interp*/
  repeated int32 synch_do = 6;
  
  /** Motion analog inputs queried by interp*/
  repeated double analog_input = 7;
  /** Motion analog outputs queried by interp*/
  repeated double analog_output = 8;
  
  repeated int32 misc_error = 9;
  
  /** Copy of EMC_DEBUG global */
  int32 debug = 10;

  int32 on_soft_limit = 11;
  int32 external_offsets_applied = 12;
  Position eoffset_pose = 13;
  int32 num_extra_joints = 14;
  bool jogging_active = 15;
}